# serializer version: 1
# name: test_batteries_update[standby]
  dict({
    'mode': 'standby',
  })
# ---
# name: test_batteries_update[to_full]
  dict({
    'mode': 'to_full',
  })
# ---
# name: test_batteries_update[zero]
  dict({
    'mode': 'zero',
  })
# ---
